Zoho raus, container div rein

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
     
     <div style="font-size: 20px;height:50px;padding:10px;color:white;background-image:linear-gradient(90deg, #274f9e, #eb5c4a);">DEMOKRATIE IN BEWEGUNG - Portal<a style="float:right" class="btn btn-default btn-sm" href="#feedback" data-toggle="modal">Info/Kontakt</a></div>
-    <div style="padding:10px">
+    <div class="container-fluid" style="padding-top:14px;">
       <div class="row">
         <div class="col-xs-12 col-sm-4">
             <div class="panel-group">
@@ -234,12 +234,7 @@
                     <div id="mgmt" class="panel-collapse collapse">
                         <div class="panel-body">
                             <ul class="pul">
-                                <li><i class="fa fa-user-md" aria-hidden="true"></i> Support:
-                                    <ul>
-                                        <li><a target="_blank" href="https://zammad.bewegung.jetzt/#login">Zammad</a></li>                                        
-                                        <li><a target="_blank" href="https://www.zoho.eu/">Zoho</a></li>
-                                    </ul>
-                                </li>
+                                <li><a target="_blank" href="https://zammad.bewegung.jetzt/#login"><img width="20px" src="icons/zammad.png" alt="Zammad"/> Zammad (Support)</a></li>
                                 <li><i class="fa fa-envelope-o" aria-hidden="true"></i> E-Mail:
                                     <ul>
                                         <li><a target="_blank" href="https://mail.bewegung.jetzt/">E-Mail Client</a></li>
