fixing minor annoyances

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         elem.src = path;
         elem.id = id;
         document.body.appendChild(elem);
-        return elem
+        return elem;
       }
       function domContentLoaded() {
         _load_js("https://cdn.jsdelivr.net/g/jquery@2.1.1,bootstrap@3.3.7");
