"Wir suchen" hinzugefügt

--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
                                         <i><li id="appeal"></li></i>
                                     </ul>
                                 </li>
+                                <li><i class="fa fa-search" aria-hidden="true"></i> Wir suchen:
+                                    <ul>
+                                        <i><li id="gesuche"></li></i>
+                                    </ul>
+                                </li>
                                 <li><i class="fa fa-sitemap" aria-hidden="true"></i> Parteistruktur:
                                     <ul>
                                         <li><a target="_blank" href="https://bewegung.jetzt/partei/#vorstand">allg. Organisationsstruktur</a></li>
@@ -301,6 +306,7 @@
                   collapsePanels();
                   cachetStatus();
                   appeal();
+                  gesuche();
                   plenum();
                   holaSpirit();
                   getMPUserInfoAndDo(function() {
