Aktualisierung von: Was ist der MP

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="modal-body">
             <p>Der Marktplatz der Ideen - oder kurz MP - ist als Forum in erster Linie dafür gedacht, Ideen für neue Initiativen vorzustellen und zu besprechen, um diese dann in der Abstimmungsplattform zu veröffentlichen.</p>
-            <p>Aber auch allgemeine Diskussionen rund um Politik und Partei können hier geführt werden.</p>
+            <p>Aber auch allgemeine Diskussionen rund um Politik und Partei können hier geführt werden. Auch als schwarzes Brett wird es genutzt, um Informationen wie z.B. Protokolle, Veranstaltungshinweise usw. zu teilen.</p>
             <p>Der MP ist kein basisdemokratisches Instrument. Umfragen, die in Diskussions-Threads erfolgen, sind nicht bindend. Allerdings stellen die Diskussionen und Abstimmungen Anregungen für die aktive Politik und Innerparteiliches dar. DiB-Aktive können sich somit Input von den Marktplatz-Teilnehmer*innen einholen.</p>
             <p>Über private Nachrichten (PN) können MP-Nutzer*innen miteinander in geschlossenen Threads kommunizieren.</p>
           </div>
