--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@
         </div>
         
       </div>
+      <div class="row">
+        <a target="_blank" style="float:right;margin-bottom:5px;margin-right:15px;" href="https://bewegung.jetzt/impressum/">Impressum</a>
+      </div>
     </div>
     
     <script>
