--- a/index.html
+++ b/index.html
@@ -119,12 +119,7 @@
                                         <i><li id="gesuche"></li></i>
                                     </ul>
                                 </li>
-                                <li><i class="fa fa-sitemap" aria-hidden="true"></i> Parteistruktur:
-                                    <ul>
-                                        <li><a target="_blank" href="https://bewegung.jetzt/partei/#vorstand">allg. Organisationsstruktur</a></li>
-                                        <li><a target="_blank" href="https://marktplatz.bewegung.jetzt/groups">Arbeitsgruppen</a></li>
-                                    </ul>
-                                </li>
+                                <li><a target="_blank" href="https://wiki.bewegung.jetzt"><img width="20px" src="icons/Wikimedia.png" alt="Wiki"/> Wiki</a></li>
                                 <li><i class="fa fa-newspaper-o" aria-hidden="true"></i> Newsletter:
                                     <ul>
                                         <li><a target="_blank" href="https://iris.bewegung.jetzt/">Iris (wöchentlich)</a></li>
