"Wir suchen" now as link only

--- a/index.html
+++ b/index.html
@@ -116,10 +116,8 @@
                                         <i><li id="appeal"></li></i>
                                     </ul>
                                 </li>
-                                <li><i class="fa fa-search" aria-hidden="true"></i> Wir suchen:
-                                    <ul>
-                                        <i><li id="gesuche"></li></i>
-                                    </ul>
+                                <li><a target="_blank" href="https://marktplatz.bewegung.jetzt/c/informationen-und-aktuelles/wir-suchen"><i class="fa fa-search" aria-hidden="true"></i> Wir suchen</a>
+                                  <ul><li><i>(Link funktioniert nur, wenn am MP angemeldet)</i></li></ul>
                                 </li>
                                 <li><a target="_blank" href="https://wiki.bewegung.jetzt"><img width="20px" src="icons/Wikimedia.png" alt="Wiki"/> Wiki</a></li>
                                 <li><i class="fa fa-newspaper-o" aria-hidden="true"></i> Newsletter:
@@ -304,7 +302,7 @@
                   _load_js("https://zammad.bewegung.jetzt/assets/form/form.js","zammad_form_script").addEventListener('load', setupSupportButton);
                   collapsePanels();
                   appeal();
-                  gesuche();
+                  //gesuche();
                   plenum();
                   //holaSpirit();
                   getMPUserInfoAndDo(function() {
