removed link to Harriet

--- a/index.html
+++ b/index.html
@@ -120,12 +120,15 @@
                                   <ul><li><i>(Link funktioniert nur, wenn am MP angemeldet)</i></li></ul>
                                 </li>
                                 <li><a target="_blank" href="https://wiki.bewegung.jetzt"><img width="20px" src="icons/Wikimedia.png" alt="Wiki"/> Wiki</a></li>
+                                <li><a target="_blank" href="https://iris.bewegung.jetzt"><i class="fa fa-newspaper-o" aria-hidden="true"></i> Iris (wöchentlicher Newsletter)</a></li>
+                                <!--
                                 <li><i class="fa fa-newspaper-o" aria-hidden="true"></i> Newsletter:
                                     <ul>
                                         <li><a target="_blank" href="https://iris.bewegung.jetzt/">Iris (wöchentlich)</a></li>
                                         <li><a target="_blank" href="https://harriet.bewegung.jetzt/">Harriet (Frauen*)</a></li>
                                     </ul>
                                 </li>
+                                -->
                             </ul>				
                         </div>
                     </div>
