new Corporate Design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="Bootstrap3.3.7.min.css" type="text/css">
   <link rel='stylesheet' href="portal.css" type="text/css"/>
-  <link rel='stylesheet' href="fonts/Rubik.css" type="text/css"/>
+  <link rel='stylesheet' href="fonts/Exo2.css" type="text/css"/>
   <link rel="stylesheet" href="https://bewegung.jetzt/cookieconsent/css" type="text/css"/>
   	
 </head>
@@ -97,7 +97,7 @@
     </div>
     -->
     
-    <div style="font-size: 20px;height:50px;padding:10px;color:white;background-image:linear-gradient(90deg, #274f9e, #eb5c4a);text-indent:5px;">DEMOKRATIE IN BEWEGUNG - Portal<a style="float:right;margin-bottom:10px;margin-right:5px;text-indent:0px;" class="btn btn-default btn-sm" href="#feedback" data-toggle="modal">Info/Kontakt</a></div>
+    <div style="font-size: 20px;height:50px;padding:10px;color:white;background-image:linear-gradient(90deg, #394E99, #CE5B48);text-indent:5px;">DEMOKRATIE IN BEWEGUNG - Portal<a style="float:right;margin-bottom:10px;margin-right:5px;text-indent:0px;" class="btn btn-default btn-sm" href="#feedback" data-toggle="modal">Info/Kontakt</a></div>
     <div class="container-fluid" style="padding-top:14px;">
       <div class="row">
         <div class="col-xs-12 col-sm-4">
