Gandi link changed

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                 <li><a target="_blank" href="https://bewegung.jetzt/wp-login.php"><i class="fa fa-wordpress" aria-hidden="true"></i> WordPress</a></li>
                                 <li><a target="_blank" href="https://piwik.bewegung.jetzt/"><img width="20px" src="icons/matomo.png" alt="Matomo"/> Matomo (Piwik Webanalytik)</a></li>
                                 <li><a target="_blank" href="https://github.com/DemokratieInBewegung"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a></li>
-                                <li><a target="_blank" href="https://admin.gandi.net/domain/4534869e-5c21-11e7-a7cd-00163e61ef31/bewegung.jetzt/dns"><img height="20px" src="icons/gandi.png" alt="Gandi"/> Gandi (Domain-Verwaltung)</a></li>
+                                <li><a target="_blank" href="https://id.gandi.net/de/login"><img height="20px" src="icons/gandi.png" alt="Gandi"/> Gandi (Domain-Verwaltung)</a></li>
                             </ul>				
                         </div>
                     </div>
