Korrektur Bezeichnung Links zu mail.bewegung.jetzt

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                                 <li><a target="_blank" href="https://zammad.bewegung.jetzt/#login"><img width="20px" src="icons/zammad.png" alt="Zammad"/> Zammad (Support)</a></li>
                                 <li><i class="fa fa-envelope-o" aria-hidden="true"></i> E-Mail:
                                     <ul>
-                                        <li><a target="_blank" href="https://mail.bewegung.jetzt/">E-Mail Client</a></li>
-                                        <li><a target="_blank" href="https://mail.bewegung.jetzt/SOGo/">SOGo Groupware</a></li>
+                                        <li><a target="_blank" href="https://mail.bewegung.jetzt/">mailcow UI</a></li>
+                                        <li><a target="_blank" href="https://mail.bewegung.jetzt/SOGo/">SOGo E-Mail Client</a></li>
                                         <li><a target="_blank" href="https://mautic.bewegung.jetzt/s/login">Mautic (E-Mail Automatisierung)</a></li>
                                     </ul>
                                 </li>
