Agora statt SK auf MP

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                                     </ul>
                                 </li>
                                 <li><a target="_blank" href="https://bewegung.jetzt/mitbestimmen/#initiativ-prinzip"><i class="fa fa-question-circle" aria-hidden="true"></i> Initiativprinzip erklärt</a></li>
-                                <li><a target="_blank" href="https://marktplatz.bewegung.jetzt/c/forum-und-austausch/sys-konsens"><img width="20px" src="icons/konsensieren-eu.png" alt="SK"/> Systemisches Konsensieren</a>
-                                  <ul><li><i>(Link funktioniert nur, wenn am MP angemeldet)</i></li></ul>
+                                <li><a target="_blank" href="https://abstimmen.bewegung.jetzt/agora"><i class="fa fa-university" aria-hidden="true"></i> Agora (Basisdemokratietool)</a>
+                                  <ul><li><i>(erfordert Registrierung/Anmeldung am Plenum)</i></li></ul>
                                 </li>
                             </ul>				
                         </div>
