--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="panel">
                     <div class="panel-heading">
                         <h5 class="panel-title">
-                            <a id="ainitiativen" class="collapsable collapsed" data-toggle="collapse" href="#initiativen" onclick="if ($(this).hasClass('collapsed')) setCookie('showInitiativen','true'); else setCookie('showInitiativen','');"><i class="fa fa-hand-paper-o" aria-hidden="true"></i> Abstimmen / Initiativen</a>
+                            <a id="ainitiativen" class="collapsable collapsed" data-toggle="collapse" href="#initiativen" onclick="if ($(this).hasClass('collapsed')) setCookie('showInitiativen','true'); else setCookie('showInitiativen','');"><i class="fa fa-hand-paper-o" aria-hidden="true"></i> Abstimmen / Abwägen</a>
                         </h5>
                     </div>
                     <div id="initiativen" class="panel-collapse collapse">
