--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@
                                 <li><i class="fa fa-newspaper-o" aria-hidden="true"></i> Newsletter:
                                     <ul>
                                         <li><a target="_blank" href="https://iris.bewegung.jetzt/">Iris (wöchentlich)</a></li>
-                                        <li><a target="_blank" href="https://harriet.bewegung.jetzt/">Harriet (Frauen*)</a></li>
                                     </ul>
                                 </li>
                                 -->
@@ -213,7 +212,7 @@
                                 <li><a target="_blank" href="https://chat.bewegung.jetzt/login"><img width="20px" src="icons/mattermost.png" alt="Mattermost"/> Mattermost (Chat)</a></li>
                                 <li><img width="20px" src="icons/zoom.png" alt="Zoom"/> Zoom (Calls / Video-Chat) Räume:
                                     <ul id="zoom">
-                                        <li><i>Du musst Beweger*in und aktuell am MP angemeldet sein, um das sehen zu können.</i></li>
+                                        <li><i>Du musst Beweger*in und aktuell am MP angemeldet sein, um die Links sehen zu können.</i></li>
                                     </ul>
                                 </li>
                                 <li><a target="_blank" href="https://wolke.bewegung.jetzt/login"><i class="fa fa-cloud" aria-hidden="true"></i> Wolke (Cloud/Kalender)</a></li>
