--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                     <ul>
                                         <li><a target="_blank" href="https://antraege.bewegung.jetzt/web/">Antragsgrün (Änderungsanträge zum BPT)</a></li>
                                         <li><a target="_blank" href="https://wahlchecker.bewegung.jetzt/">Wahlchecker</a></li>
-                                        <li><a target="_blank" href="https://backoffice.bewegung.jetzt/">Backoffice-Tools</a></li>
+                                        <!--- <li><a target="_blank" href="https://backoffice.bewegung.jetzt/">Backoffice-Tools</a></li> --->
                                     </ul>
                                 </li>
                             </ul>				
