--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     <div id="it" class="panel-collapse collapse">
                         <div class="panel-body">
                             <ul class="pul">
-                                <li><a target="_blank" href="https://bewegung.jetzt/wp-login.php"><i class="fa fa-wordpress" aria-hidden="true"></i> WordPress</a></li>
+                                <!--<li><a target="_blank" href="https://bewegung.jetzt/wp-login.php"><i class="fa fa-wordpress" aria-hidden="true"></i> WordPress</a></li>-->
                                 <li><a target="_blank" href="https://piwik.bewegung.jetzt/"><img width="20px" src="icons/matomo.png" alt="Matomo"/> Matomo (Piwik Webanalytik)</a></li>
                                 <li><a target="_blank" href="https://github.com/DemokratieInBewegung"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a></li>
                                 <li><a target="_blank" href="https://id.gandi.net/de/login"><img height="20px" src="icons/gandi.png" alt="Gandi"/> Gandi (Domain-Verwaltung)</a></li>
