remove old code, add newsletter software

--- a/index.html
+++ b/index.html
@@ -121,13 +121,6 @@
                                 </li>
                                 <li><a target="_blank" href="https://wiki.bewegung.jetzt"><img width="20px" src="icons/Wikimedia.png" alt="Wiki"/> Wiki</a></li>
                                 <li><a target="_blank" href="https://iris.bewegung.jetzt"><i class="fa fa-newspaper-o" aria-hidden="true"></i> Iris (wöchentlicher Newsletter)</a></li>
-                                <!--
-                                <li><i class="fa fa-newspaper-o" aria-hidden="true"></i> Newsletter:
-                                    <ul>
-                                        <li><a target="_blank" href="https://iris.bewegung.jetzt/">Iris (wöchentlich)</a></li>
-                                    </ul>
-                                </li>
-                                -->
                             </ul>				
                         </div>
                     </div>
@@ -241,7 +234,7 @@
                                     <ul>
                                         <li><a target="_blank" href="https://mail.bewegung.jetzt/">mailcow UI</a></li>
                                         <li><a target="_blank" href="https://mail.bewegung.jetzt/SOGo/">SOGo E-Mail Client</a></li>
-                                        <li><a target="_blank" href="https://mautic.bewegung.jetzt/s/login">Mautic (E-Mail Automatisierung)</a></li>
+                                        <li><a target="_blank" href="https://mautic.bewegung.jetzt/s/login">Mautic (Iris-Newsletter Versand)</a></li>
                                     </ul>
                                 </li>
                                 <li><a target="_blank" href="https://mitgliedsantrag.bewegung.jetzt/account/login/?next=/applications/inbox"><i class="fa fa-user-plus" aria-hidden="true"></i> Mitgliedsanträge</a></li>
@@ -250,6 +243,7 @@
                                     <ul>
                                         <li><a target="_blank" href="https://antraege.bewegung.jetzt/web/">Antragsgrün (Änderungsanträge zum BPT)</a></li>
                                         <li><a target="_blank" href="https://wahlchecker.bewegung.jetzt/">Wahlchecker</a></li>
+					<li><a target="_blank" href="https://bewegung56119.activehosted.com/admin/">Newsletter Software</a></li>
                                         <!--- <li><a target="_blank" href="https://backoffice.bewegung.jetzt/">Backoffice-Tools</a></li> --->
                                     </ul>
                                 </li>
