--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                     <ul>
                                         <li><a target="_blank" href="https://antraege.bewegung.jetzt/web/">Antragsgrün (Änderungsanträge zum BPT)</a></li>
                                         <li><a target="_blank" href="https://wahlchecker.bewegung.jetzt/">Wahlchecker</a></li>
-					<li><a target="_blank" href="https://bewegung56119.activehosted.com/admin/">Newsletter Software</a></li>
+					<li><a target="_blank" href="https://bewegung56119.activehosted.com/admin/">ActiveCampaign (Newsletter Software)</a></li>
                                         <!--- <li><a target="_blank" href="https://backoffice.bewegung.jetzt/">Backoffice-Tools</a></li> --->
                                     </ul>
                                 </li>
