--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                                 <li><a target="_blank" href="https://zammad.bewegung.jetzt/#login"><img width="20px" src="icons/zammad.png" alt="Zammad"/> Zammad (Support)</a></li>
                                 <li><i class="fa fa-envelope-o" aria-hidden="true"></i> E-Mail:
                                     <ul>
-                                        <li><a target="_blank" href="https://mail.bewegung.jetzt/">mailcow UI</a></li>
-                                        <li><a target="_blank" href="https://mail.bewegung.jetzt/SOGo/">SOGo E-Mail Client</a></li>
+                                        <li><a target="_blank" href="https://mail.bewegung.jetzt/">mailcow UI (Änderung von Einstellungen der Mailbox)</a></li>
+                                        <li><a target="_blank" href="https://mail.bewegung.jetzt/SOGo/">SOGo Webmail Client (für DiB E-Mail)</a></li>
                                         <li><a target="_blank" href="https://mautic.bewegung.jetzt/s/login">Mautic (Iris-Newsletter Versand)</a></li>
                                     </ul>
                                 </li>
@@ -242,7 +242,7 @@
                                 <li><i class="fa fa-wrench" aria-hidden="true"></i> Sonstige Tools:
                                     <ul>
                                         <li><a target="_blank" href="https://antraege.bewegung.jetzt/web/">Antragsgrün (Änderungsanträge zum BPT)</a></li>
-                                        <li><a target="_blank" href="https://wahlchecker.bewegung.jetzt/">Wahlchecker</a></li>
+                                        <li><a target="_blank" href="https://wahlchecker.bewegung.jetzt/">Wahlchecker (Prüfung Vorstandswahlen)</a></li>
 					<li><a target="_blank" href="https://bewegung56119.activehosted.com/admin/">ActiveCampaign (Newsletter Software)</a></li>
                                         <!--- <li><a target="_blank" href="https://backoffice.bewegung.jetzt/">Backoffice-Tools</a></li> --->
                                     </ul>
@@ -268,6 +268,7 @@
                                 <!--<li><a target="_blank" href="https://bewegung.jetzt/wp-login.php"><i class="fa fa-wordpress" aria-hidden="true"></i> WordPress</a></li>-->
                                 <li><a target="_blank" href="https://piwik.bewegung.jetzt/"><img width="20px" src="icons/matomo.png" alt="Matomo"/> Matomo (Piwik Webanalytik)</a></li>
                                 <li><a target="_blank" href="https://github.com/DemokratieInBewegung"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a></li>
+				<li><a target="_blank" href="https://app.travis-ci.com/dashboard"><i class="fa fa-github" aria-hidden="true"></i> Travis CI</a></li>
                                 <li><a target="_blank" href="https://id.gandi.net/de/login"><img height="20px" src="icons/gandi.png" alt="Gandi"/> Gandi (Domain-Verwaltung)</a></li>
                             </ul>				
                         </div>
