info circle logo update

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="panel">
                     <div class="panel-heading">
                         <h5 class="panel-title">
-                            <a id="ainfo" class="collapsable collapsed" data-toggle="collapse" href="#info" onclick="if ($(this).hasClass('collapsed')) setCookie('showInfo','true'); else setCookie('showInfo','');"><i class="fa fa-circle-info" aria-hidden="true"></i> Information</a>
+                            <a id="ainfo" class="collapsable collapsed" data-toggle="collapse" href="#info" onclick="if ($(this).hasClass('collapsed')) setCookie('showInfo','true'); else setCookie('showInfo','');"><i class="fa-regular fa-circle-info" aria-hidden="true"></i> Information</a>
                         </h5>
                     </div>
                     <div id="info" class="panel-collapse collapse">
