--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="apple-touch-icon-precomposed" href="icons/logo.png" />
   <meta name="msapplication-TileImage" content="icons/thumb.png" />
   
-  <link rel="stylesheet" href="fontawesome-free-6.3.0-web/css/fontawesome.min.css" type="text/css">
+  <link rel="stylesheet" href="font-awesome-4.7.0/font-awesome.min.css" type="text/css">
+  <!-- link rel="stylesheet" href="fontawesome-free-6.3.0-web/css/fontawesome.min.css" type="text/css"> -->
   <link rel="stylesheet" href="Bootstrap3.3.7.min.css" type="text/css">
   <link rel='stylesheet' href="portal.css" type="text/css"/>
   <link rel='stylesheet' href="fonts/Exo2.css" type="text/css"/>
